# actionslogs-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: cargo.yml  pages.yml
script/: build  server
src/: ansi.rs  element.rs  lib.rs  line.rs  log.rs  parser.rs  render.old.rs  render.old2.rs  render.rs  style.rs  tokens.rs
web/: bun.lockb  index.html  package.json  vite.config.ts
web/src/: App.tsx  GlobalStyle.tsx  index.css  main.tsx
web/src/components/: Layout.tsx  Preview.tsx
web/src/hooks/: useParser.ts
web/src/parser/: index.ts
