[package]
name = "actionslogs"
version = "0.1.0"
authors = ["Rob Herley <robherley13@gmail.com>"]
description = "A tool for parsing and displaying the logs from GitHub Actions"
license = "MIT"
repository = "https://github.com/robherley/actionslogs-rs"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.31"
linkify = "0.10.0"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
wasm-bindgen = "0.2.89"
